--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 py-cord = {extras = ["all"], version = "^2.4.1"}
 python-dotenv = "^1.0.1"
+httpx = "^0.27.0"
 
 
 [build-system]
