--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 py-cord = {extras = ["all"], version = "^2.4.1"}
 python-dotenv = "^1.0.1"
 httpx = "^0.27.0"
+redis = "^5.0.2"
 
 
 [build-system]
