--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ py-cord = {extras = ["all"], version = "^2.4.1"}
 python-dotenv = "^1.0.1"
 httpx = "^0.27.0"
 redis = "^5.0.2"
+prettytable = "^3.10.0"
 
 
 [build-system]
