--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3.8'
 services:
   bot:
     build: .
-    command: python main.py
     volumes:
-      - .:/app
+      - ./:/app
     networks:
       - cs2-battle-bot-network
+    restart: always
 
 networks:
   cs2-battle-bot-network:
