--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,14 @@ TOKEN=
 API_URL=
 API_TOKEN=
 TESTING=False
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
+SENTRY_DSN=
+GUILD_ID=
+LOBBY_CHANNEL_ID=
+TEAM1_CHANNEL_ID=
+TEAM2_CHANNEL_ID=
+TEAM1_ROLE_ID=
+TEAM2_ROLE_ID=
