--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cs2-battle-bot"
-version = "0.1.1"
+version = "0.0.5"
 description = ""
 authors = ["Adrian Ciolek <ciolek.adrian@protonmail.com>"]
 readme = "README.md"
@@ -17,6 +17,7 @@ prettytable = "^3.10.0"
 pydantic-settings = "^2.2.1"
 pydantic = "^2.6.3"
 taskipy = "^1.12.2"
+sentry-sdk = "^1.41.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -70,4 +71,5 @@ ignore = [
     "T201",
     "TCH001",
     "A003",
+    "ARG002"
 ]
