Added initial docs

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,35 @@
-TOKEN=
-API_URL=
-API_TOKEN=
-TESTING=False
+# API environment variables
+DEBUG=False
+SECRET_KEY=django-insecure-#-z
+ALLOWED_HOSTS=*
+# Add new sites by separating them with a comma
+CSRF_TRUSTED_ORIGINS=http://localhost:8002,http://127.0.0.1:8002
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=db
+DB_PORT=5432
+REDIS_URL=redis://redis:6379/0
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD=
-SENTRY_DSN=
+HOST_URL=http://localhost:8002
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_REDIRECT_URI=http://localhost:8002/accounts/discord/callback
+STEAM_API_KEY=
+STEAM_REDIRECT_URI=http://localhost:8002/accounts/steam/callback
+RCON_HOST=
+RCON_PORT=27015
+RCON_PASSWORD=
+SERVER_PASSWORD=change_me
+SERVER_PORT=27015
+API_KEY=
+# Bot environment variables
+DISCORD_BOT_TOKEN=
 GUILD_ID=
 LOBBY_CHANNEL_ID=
 TEAM1_CHANNEL_ID=
 TEAM2_CHANNEL_ID=
-TEAM1_ROLE_ID=
-TEAM2_ROLE_ID=
