--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cs2-battle-bot"
-version = "0.0.7"
+version = "0.0.8"
 description = ""
 authors = ["Adrian Ciolek <ciolek.adrian@protonmail.com>"]
 readme = "README.md"
@@ -17,13 +17,16 @@ prettytable = "^3.10.0"
 pydantic-settings = "^2.2.1"
 pydantic = "^2.6.3"
 taskipy = "^1.12.2"
-sentry-sdk = "^1.41.0"
 pycord-i18n = "^1.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.0"
 pre-commit = "^3.6.2"
+markdown-exec = ">=1.3.0"
+mkdocs-material = ">=8.2,<10.0.0"
+mkdocstrings = { version = ">=0.19.0", extras = ["python"] }
+
 
 [build-system]
 requires = ["poetry-core"]
