--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ taskipy = "^1.12.2"
 pycord-i18n = "^1.2.1"
 
 
+[tool.poetry.group.docs]
+optional = true
+
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.0"
 pre-commit = "^3.6.2"
