--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,11 @@ optional = true
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.0"
 pre-commit = "^3.6.2"
+
+[tool.poetry.group.docs.dependencies]
 markdown-exec = ">=1.3.0"
 mkdocs-material = ">=8.2,<10.0.0"
 mkdocstrings = { version = ">=0.19.0", extras = ["python"] }
-
 
 [build-system]
 requires = ["poetry-core"]
