--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ optional = true
 markdown-exec = ">=1.3.0"
 mkdocs-material = ">=8.2,<10.0.0"
 mkdocstrings = { version = ">=0.19.0", extras = ["python"] }
+pymdown-extensions = "^10.7.1"
+
 
 [build-system]
 requires = ["poetry-core"]
