--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,4 +9,4 @@ build:
     post_install:
     - "pip install poetry"
     - "poetry config virtualenvs.create false"
-    - "poetry install --with=docs"
+    - "poetry install"
