--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,53 +1,5 @@
-site_name: "CS2 Battle Bot"
-site_description: "CS2 Battle Bot."
-site_url: "https://cs2-battle-bot.readthedocs.io/en/latest/"
-repo_url: "https://github.com/Qwizi/cs2-battle-bot"
-repo_name: "Qwizi/cs2-battle-bot"
-watch:
-- "bot"
+site_name: My Docs
 
-nav:
-- "Strona główna": "index.md"
 
 theme:
-  name: "material"
-  features:
-  - "content.code.annotate"
-  - "navigation.top"
-  - "navigation.tracking"
-  palette:
-  - media: "(prefers-color-scheme)"
-    toggle:
-      icon: "material/brightness-auto"
-      name: "Switch to light mode"
-  - media: "(prefers-color-scheme: light)"
-    scheme: "default"
-    primary: "teal"
-    accent: "purple"
-    toggle:
-      icon: "material/weather-sunny"
-      name: "Switch to dark mode"
-  - media: "(prefers-color-scheme: dark)"
-    scheme: "slate"
-    primary: "black"
-    accent: "lime"
-    toggle:
-      icon: "material/weather-night"
-      name: "Switch to system preference"
-
-extra_css:
-- "css/mkdocstrings.css"
-
-plugins:
-  - autorefs
-  - search
-  - markdown-exec
-  - mkdocstrings:
-      handlers:
-        python:
-          options:
-            members_order: "source"
-            show_signature_annotations: true
-          paths: ["bot/"]
-          import:
-          - "https://docs.python.org/3/objects.inv"
+  name: material
