--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pycord-i18n = "^1.2.1"
 markdown-exec = ">=1.3.0"
 mkdocs-material = ">=8.2,<10.0.0"
 mkdocstrings = { version = ">=0.19.0", extras = ["python"] }
+mkdocs = "^1.5.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.0"
