--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,6 +6,11 @@ build:
   tools:
     python: "3.11"
   jobs:
+    post_create_environment:
+      # Install poetry
+      - pip install poetry
+      # Tell poetry to not use a virtual environment
+      - poetry config virtualenvs.create false
     post_install:
-    - "pip install poetry"
-    - "poetry install"
+      # Install dependencies
+      - poetry install --with docs
