--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,14 @@ pydantic-settings = "^2.2.1"
 pydantic = "^2.6.3"
 taskipy = "^1.12.2"
 pycord-i18n = "^1.2.1"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
 markdown-exec = ">=1.3.0"
 mkdocs-material = ">=8.2,<10.0.0"
 mkdocstrings = { version = ">=0.19.0", extras = ["python"] }
-mkdocs = "^1.5.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.0"
