--- a/examples/without-ssl/default.conf
+++ b/examples/without-ssl/default.conf
@@ -9,7 +9,7 @@ server {
     location / {
         proxy_pass http://cs2_battle_bot_api;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
+        proxy_set_header Host $http_host;
         proxy_redirect off;
     }
 
