Added install script

--- a/cs2-battle-bot/.env.example
+++ b/cs2-battle-bot/.env.example
@@ -1,5 +1,6 @@
+# API
 DEBUG=False
-SECRET_KEY=
+SECRET_KEY=your-secret-key
 DB_ENGINE=django.db.backends.postgresql
 DB_HOST=db
 DB_PORT=5432
@@ -17,6 +18,7 @@ CSRF_TRUSTED_ORIGINS=http://localhost:8002
 CORS_ALLOW_ALL_ORIGINS=True
 SECURE_SSL_REDIRECT=False
 
+# Bot
 DISCORD_BOT_TOKEN=bot-token
 API_URL=https://domain.com
 API_KEY=yout-api-key
