Updated install/upgrade scripts

--- a/examples/without-ssl/.env.example
+++ b/examples/without-ssl/.env.example
@@ -16,7 +16,9 @@ STEAM_API_KEY=some-steam-api-key
 CSRF_TRUSTED_ORIGINS=http://localhost:8002
 CORS_ALLOW_ALL_ORIGINS=True
 SECURE_SSL_REDIRECT=False
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_PASSWORD=
 
 DISCORD_BOT_TOKEN=bot-token
 API_URL=https://domain.com
-API_KEY=yout-api-key
+API_KEY=
