--- a/examples/without-ssl/docker-compose.yml
+++ b/examples/without-ssl/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - db
     networks:
       - cs2-battle-bot-network
+    tty: true
   db:
     image: postgres:15.1
     container_name: cs2_battle_bot_api_db_prod
