--- a/examples/without-ssl/docker-compose.yml
+++ b/examples/without-ssl/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     networks:
       - cs2-battle-bot-network
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
   redis:
     image: "redis:alpine"
     container_name: cs2_battle_bot_api_redis_prod
