--- a/examples/coolify/docker-compose.yml
+++ b/examples/coolify/docker-compose.yml
@@ -84,6 +84,15 @@ services:
       - 'REDIS_PASSWORD=${REDIS_PASSWORD}'
     networks:
       - cs2-battle-bot-network
+    coolify-helper:
+      image: ghcr.io/coollabsio/coolify-helper:latest
+      container_name: coolify-helper
+      volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
+        - ./:/
+      networks:
+        - cs2-battle-bot-network
+
 networks:
   cs2-battle-bot-network:
     external: true
