--- a/examples/coolify/docker-compose.yml
+++ b/examples/coolify/docker-compose.yml
@@ -27,6 +27,9 @@ services:
             - 'CORS_ALLOW_ALL_ORIGINS=${CORS_ALLOW_ALL_ORIGINS}'
             - 'SECURE_SSL_REDIRECT=${SECURE_SSL_REDIRECT}'
             - 'SECURE_PROXY_SSL_HEADER=${SECURE_PROXY_SSL_HEADER}'
+            - 'DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}'
+            - 'API_URL=${API_URL}'
+            - 'API_KEY=${API_KEY}'
         restart: unless-stopped
         depends_on:
             - db
