--- a/examples/coolify/docker-compose.yml
+++ b/examples/coolify/docker-compose.yml
@@ -113,6 +113,9 @@ services:
             - 'DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}'
             - 'API_URL=${API_URL}'
             - 'API_KEY=${API_KEY}'
+        privileged: true
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
         networks:
             - cs2-battle-bot-network
 
