--- a/examples/coolify/docker-compose.yml
+++ b/examples/coolify/docker-compose.yml
@@ -90,9 +90,10 @@ services:
         networks:
             - cs2-battle-bot-network
     coolify-helper:
-        image: 'ghcr.io/coollabsio/coolify-helper:latest'
+        build:
+            context: .
+            dockerfile: Dockerfile
         container_name: cs2_battle_bot_coolify_helper
-        command: curl -sSL https://raw.githubusercontent.com/Qwizi/cs2-battle-bot/master/scripts/upgrade.sh
         environment:
             - 'DEBUG=${DEBUG}'
             - 'SECRET_KEY=${SECRET_KEY}'
