--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Send Webhook
         run: |
-         curl --request GET --url ${{secrets.COOLIFY_WEBHOOK}} --header 'Authorization: Bearer ${{ secrets.COOLIFY_API_KEY }}'
+         curl --request GET --url '${{secrets.COOLIFY_WEBHOOK}}' --header 'Authorization: Bearer ${{ secrets.COOLIFY_API_KEY }}'
