--- a/.github/workflows/docker-api.yml
+++ b/.github/workflows/docker-api.yml
@@ -18,7 +18,7 @@ jobs:
             -   name: Check for changes
                 id: check_changes
                 run: |
-                    if [[ $(git diff --name-only ${{ github.event.before }} ${{ github.sha }}) == *"api"* ]]; then
+                    if [[ $(git diff --name-only "" ${{ github.sha }}) == *"src"* ]]; then
                       echo "::set-output name=changes::true"
                     else
                       echo "::set-output name=changes::false"
