--- a/.github/workflows/generate-schema.yml
+++ b/.github/workflows/generate-schema.yml
@@ -55,7 +55,7 @@ jobs:
                         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
                 uses: Ilshidur/action-discord@master
                 with:
-                    args: '${{ EVENT_PAYLOAD.repository.full_name }} successfully generated openapi schema.'
+                    args: '${{ github.repository }} successfully generated openapi schema.'
 #            -   name: Trigger Client Generation
 #                uses: peter-evans/repository-dispatch@v2
 #                with:
@@ -76,4 +76,4 @@ jobs:
                     DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
                 uses: Ilshidur/action-discord@master
                 with:
-                    args: 'Successfuly released new version of ${{ EVENT_PAYLOAD.repository.full_name }}. API Version: ${{ env.API_RELEASE_VERSION }}, Bot Version: ${{ env.BOT_RELEASE_VERSION }}.'
+                    args: 'Successfuly released new version of ${{github.repository}}. API Version: ${{ env.API_RELEASE_VERSION }}, Bot Version: ${{ env.BOT_RELEASE_VERSION }}.'
