updated api workflow

--- a/.github/workflows/docker-api.yml
+++ b/.github/workflows/docker-api.yml
@@ -1,7 +1,6 @@
 name: Publish API Docker Image
 
-on:
-    workflow_dispatch:
+on: workflow_dispatch
 #    workflow_run:
 #        workflows: ["generate-schema.yml"]
 #        types:
